--- a/premypage2/tags/items/item-work-card.jade
+++ b/premypage2/tags/items/item-work-card.jade
@@ -15,7 +15,7 @@ item-work-card
         margin-top: 12px;
         overflow: hidden;
         width: 100%;
-        max-height: 360px;
+        /*max-height: 360px;*/
         img{
           width: 100%;
         }
