--- a/premypage2/tags/modals/modal-about.jade
+++ b/premypage2/tags/modals/modal-about.jade
@@ -5,10 +5,10 @@ modal-about.modal
     p 慶応大学に在学してます。アート・デザイン・プログラミングなどの分野で活動しています。テクノロジーを駆使した新しい表現としてのアート、エンジニアリングを考慮したシームレスな設計としてのデザインとかその辺ですね。
     p まあ、こういう形式的な話はどうでもいいんですよ。まだまだ未熟なものばかりですが、野心的なものから実験的なものも含めて作品があるのでよかったら見てやってください。作風をみて何か気が合いそうだと感じたらご連絡お願いします。何か一緒に創りましょう。楽しみにしています。
     atom-modal-h2(h2_str = "{'This year\s resolution'}")
-    span.resolution 「おきにいかない」
+    span.resolution 「そこは、おきにいかない」
     p 既視感という怪物に襲われています。色々ないものを見て、それに近いものをつくればいいものはできるんです。例えばグラフィックなんかは白黒スタイリッシュなデザインのものをつくればたいていかっこよくなるんですよ。
     p でもそれを繰り返してるだけじゃダサいじゃないですか。没個性もいいとこです。問題解決的なデザインならそれでもいいんだと思うんですけどね。問題提起的なものをつくるならそれじゃいけないとおもうんです。
-    p もちろん、そういうデザインが求められてるなら普通につくります。それも間違いなく大事なので。ただ、自分のアート作品は「おきにいく」ことはしたくないんです。
+    p もちろん、そういうデザインをすべき時は普通につくります。それも間違いなく大事なのです。わきまえています。ただ、自分のアート作品は「おきにいく」ことはしたくないんです。
     atom-modal-h2(h2_str = "{'Skill'}")
     span.skills Openframeworks / Processing / C++ / HTML5 / CSS3 / Javascript / Riot.js / Processing.js / Sketche / Figma / Illustrator / Photoshop
     atom-modal-h2(h2_str = "{'Contact'}")
@@ -23,7 +23,6 @@ modal-about.modal
   style(scoped, type='less').
     :scope {
       display: none;
-      position: fixed;
       width: 95%;
       height: 95%;
       top: 2.5%;
