--- a/premypage2/tags/modals/modal-art.jade
+++ b/premypage2/tags/modals/modal-art.jade
@@ -16,7 +16,6 @@ modal-art.modal
   style(scoped, type='less').
     :scope {
       display: none;
-      position: fixed;
       width: 95%;
       height: 95%;
       top: 2.5%;
@@ -30,7 +29,7 @@ modal-art.modal
         width: 95%;
         .wrap-explain {
           display: block;
-          padding: 24px 0px;
+          padding-bottom: 36px;
           border-bottom: solid 0.1px #4A4A4A;
         }
       }
