--- a/premypage2/less/index.less
+++ b/premypage2/less/index.less
@@ -14,9 +14,11 @@ body {
 p {
   color: #4A4A4A;
   font-size: 14px;
+  margin-top: 16px;
 }
 
 h2 {
   color: #4A4A4A;
   font-size: 18px;
+  margin-top: 16px;
 }
