--- a/premypage2/tags/app.jade
+++ b/premypage2/tags/app.jade
@@ -1,13 +1,31 @@
 app
-  modal-about
-  modal-art
+  div.overlay
+    div.f.fh.wrap-modal
+      modal-about
+      modal-art
+      modal-branding
+      modal-uiux
 
   style(scoped, type='less').
     :scope {
-      width: 100%;
+      /*
       display: flex;
+      display:-webkit-box;
+      display:-ms-flexbox;
+      display: -webkit-flex;
       justify-content: center;
+      -webkit-justify-content: center;
+      */
+      .overlay {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        .wrap-modal {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
 
   script.
-    console.log('riot loaded');
