--- a/premypage2/tags/atoms/atom-modal-h2.jade
+++ b/premypage2/tags/atoms/atom-modal-h2.jade
@@ -6,9 +6,10 @@ atom-modal-h2
     :scope {
       display: flex;
       justify-content: center;
-      margin-top: 32px;
+      margin: 32px 0px;
       h2 {
         font-size: 24px;
+        padding-bottom: 4px;
         display: inline;
         text-align: center;
         border-color: #4A4A4A;
