--- a/premypage2/tags/app.jade
+++ b/premypage2/tags/app.jade
@@ -5,6 +5,8 @@ app
       modal-art
       modal-branding
       modal-uiux
+  overlay-loading
+  overlay-choose
 
   style(scoped, type='less').
     :scope {
