--- a/premypage2/less/index.less
+++ b/premypage2/less/index.less
@@ -1,10 +1,17 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+
 body {
   margin: 0;
   overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .modal {
- 
+
 }
 
 .active-modal {
@@ -15,10 +22,35 @@ p {
   color: #4A4A4A;
   font-size: 14px;
   margin-top: 16px;
+  font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
 h2 {
   color: #4A4A4A;
   font-size: 18px;
   margin-top: 16px;
+  font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
+}
+
+span {
+  font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
+}
+
+#particlesCanvas {
+  display: block;
+  margin: 0 auto;
+}
+
+#loadingOverlay {
+  z-index: 1001;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #000;
+}
+
+#soundtoggleOverlay {
+
 }
