--- a/kooh/less/index.less
+++ b/kooh/less/index.less
@@ -36,6 +36,10 @@ span {
   font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
+a {
+  font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
+}
+
 #particlesCanvas {
   display: block;
   margin: 0 auto;
