--- a/kooh/tags/items/item-work-card.jade
+++ b/kooh/tags/items/item-work-card.jade
@@ -22,7 +22,7 @@ item-work-card
         }
       }
       a {
-        display: block;
+        display: inline-block;
         margin-top: 16px;
         color: #999;
         font-size: 14px;
