--- a/kooh/tags/modals/modal-about.jade
+++ b/kooh/tags/modals/modal-about.jade
@@ -6,7 +6,7 @@ modal-about.modal
     p まあ、こういう形式的な話はどうでもいいんですよ。まだまだ未熟なものばかりですが、野心的なものから実験的なものも含めて作品があるのでよかったら見てやってください。作風をみて何か気が合いそうだと感じたらご連絡お願いします。何か一緒に創りましょう。楽しみにしています。
     atom-modal-h2(h2_str = "{'This year\s resolution'}").mt64
     span.resolution 「今年は、おきにいかない」
-    p 既視感という怪物に襲われています。色々ないものを見て、それに近いものをつくればいいものはできますよね。安定して支持を得られるけれどもずば抜けて新しいわけじゃないものを作り続ければ少なくとも食べてはいけます。
+    p 既視感という怪物に襲われています。色々いいものを見て、それに近いものをつくればいいものはできますよね。安定して支持を得られるけれどもずば抜けて新しいわけじゃないものを作り続ければ少なくとも食べてはいけます。
     p でもそれを繰り返してるだけじゃダサいじゃないですか。没個性もいいとこです。問題解決的なものづくりならそれでもいいんだと思うんですけどね。問題提起的なものづくりをするならそれじゃいけないとおもうんです。
     p もちろん、特にずば抜けた新しさは必要ないけれども良いデザインが必要な時はそこに向かって尽力します。それも間違いなく大事です。わきまえています。ただ、自分の理念から生まれるアウトプットとしての作品ではそういうことはしたくないんです。
     atom-modal-h2(h2_str = "{'Skill'}").mt64
