--- a/kooh/tags/modals/modal-art.jade
+++ b/kooh/tags/modals/modal-art.jade
@@ -3,9 +3,9 @@ modal-art.modal
   div.content
     atom-modal-h2(h2_str = "{'Art'}")
     div.wrap-explain
-      p 趣味と大学の研究でアート作品をつくっています。ものづくりにおいて「おきにいきたくない」のはこの活動ですね。さて、私は自然が好きです。特に木が好きなんです。なので作品は自然にまつわるものが多いと思います。
-      p ご紹介する作品については説明書きもありますが、そこで多くを説明するのはあまりかっこよくないと思ってるので、そこまで深くは読まないでも大丈夫ですよ。補足程度に思っててください。できれば説明なんてしなくても伝わるものをつくれればいいんですけどね。
-      p まあ、とりあえず見てみてください。まだアートをはじめてから１年ほどなので歴は浅いのですが、色々と迷走しながらもアウトプットしています。実験的なものや拙いものも多いですが、何か感想などいただければ幸いです。
+      p 趣味と大学の研究でアート作品をつくっています。ものづくりにおいて「おきにいきたくない」のはこの活動ですね。さて、私は自然が好きです。なので作品は自然にまつわるものが多いと思います。
+      p 紹介する作品については説明書きもありますが、そこで多くを説明するのはあまりかっこよくないと思ってるので、そこまで深くは読まないでも大丈夫ですよ。補足程度に思っててください。
+      p できれば説明なんてしなくても伝わるものをつくれればいいんですけどね。まだまだ実験的なものや拙いものも多いですが、何か感想などいただければ幸いです。
     item-work-card(content = '{cardContents.ripple}')
     item-work-card(content = '{cardContents.genesys}')
     item-work-card(content = '{cardContents.fractalVision}')
